package com.fix_it.core.domain.entity;

import java.util.UUID;

public class ItemPecaOS {


    private UUID id;

    private String nome;

    private String descricao;

    private Integer quantidade;

    private Long valorUnitario;

    private Long valorTotal;

    private OrdemServico ordemServico;

    private ItemEstoque itemEstoque;


}
