package com.fix_it.core.domain.entity;

import java.util.UUID;

public class ItemServicoOS {

    private UUID id;

    private Integer quantidadeHoras;

    private Long valorUnitario;

    private Long valorTotal;

    private OrdemServico ordemServico;

    private Servico servico;
}
